== 1.2.4

* Major changes
 * Added class filtering to Acl in 'create' action. <== TODO: Document
 * Uploading html files does not transform them into zafu (use .zafu ext for this)
 * Added file upload support from zena remote API.
 * Added 'content_type' regexp to force virtual class on Document creation. <== TODO: Document
 * Extended "create group" in vclass to be "allow group" (edit).
 
* Minor changes
 * Support for raw html in zazen with '<notextile>' or '<html>' tag. Must be allowed with notextile='true' on [zazen] tag.
 * Fixed preview of content with ACL (considering the POST on /zafu as a 'read').
 * Added support for "class not like Image" or "class <> Image" to sqliss.
 * Added url to clear cache with /sites/clear_cache (admin only). <== TODO: Document
 * encode_params now supports arrays.

== 1.2.3 2013-03-11

* Major changes
 * Better support for Passenger (deploy receipt, asset host)
 * Support for 'sortable' <== TODO: Document
 * html_escape all properties by default
 * Better support for Passenger (default deployment method now)
 * Simplified caching (using cachestamp in filename)
 * Added preview='dom_id' to [form]. (Use preview_node to show preview content.) <== TODO: Document
 * Added "in_group" zafu method on visitor. <== TODO: Document
 * Added [upload_field] method to zafu to allow custom upload forms. <== TODO: Document
 * Added support for custom images on nodes with the "img_tag_{mode}" string attribute or the 'img_tag' hash attribute. <== TODO: Document
 * Added support for tag clouds through sqliss (<r:void do='tag_cloud from nodes in site' do='each' join=', '><r:name/> (<r:link_count/>)</r:void>). <== TODO: Document

* Minor changes
 * Support for 'lang_list' when creating vhost file <== TODO: Document
 * Support for Range in zafu. <== TODO: Document
 * Added options to query_parse to ignore unwanted parameters <== TODO: Document
 * Added 'hparams' option to only return Hash parameters from params. <== TODO: Document